[backend] Implement basic exposition functionality
Implement making an exposition, assigning devices and packages
and sending packages to connected devices.
Also generate API definitions and add nswag.json for generating
API client for CMToolbox.
