# backend/Controllers/ExpositionController.cs
@@ -3,6 +3,9 @@ using backend.Model;
 using backend.ViewModels;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
+using System.Linq;
+using System.Collections.Generic;
+using Microsoft.EntityFrameworkCore;
 
 namespace backend.Controllers
 {
@@ -20,7 +23,7 @@ namespace backend.Controllers
         }
 
         [HttpPost("new")]
-        public async Task<ActionResult> New([FromBody] ExpositionProperties properties)
+        public async Task<ActionResult<ExpositionProperties>> New([FromBody] ExpositionProperties properties)
         {
             Exposition exposition = new Exposition
             {
@@ -31,15 +34,27 @@ namespace backend.Controllers
             };
             _dbContext.Expositions.Add(exposition);
             await _dbContext.SaveChangesAsync();
-            return Ok(exposition.Id);
+            properties.Id = exposition.Id;
+            return Ok(properties);
         }
 
+        [HttpGet("all")]
+        public IEnumerable<ExpositionProperties> GetAll() => _dbContext.Expositions.Select(ex => new ExpositionProperties
+        {
+            Id = ex.Id,
+            Name = ex.Name,
+            Description = ex.Description,
+            StartDate = ex.StartDate,
+            EndDate = ex.EndDate
+        });
+
         [HttpGet("properties/{id}")]
-        public async Task<ActionResult> GetProperties(int id)
+        public async Task<ActionResult<ExpositionProperties>> GetProperties(int id)
         {
             Exposition exposition = await _dbContext.Expositions.FindAsync(id);
             if (exposition == null)
                 return NotFound();
+            _dbContext.Entry(exposition).Collection(ex => ex.Metadata).Load();
 
             return Ok(new ExpositionProperties
             {
@@ -47,14 +62,19 @@ namespace backend.Controllers
                 Name = exposition.Name,
                 Description = exposition.Description,
                 StartDate = exposition.StartDate,
-                EndDate = exposition.EndDate
+                EndDate = exposition.EndDate,
+                Metadata = exposition.Metadata.Select(m => new ExpositionMeta
+                {
+                    Key = m.Key,
+                    Value = m.Value
+                }).ToList()
             });
         }
 
         [HttpPost("properties/{id}")]
         public async Task<ActionResult> SetProperties(int id, [FromBody] ExpositionProperties properties)
         {
-            Exposition exposition = await _dbContext.Expositions.FindAsync(id);
+            Exposition exposition = await _dbContext.Expositions.Include(ex => ex.Metadata).FirstOrDefaultAsync(ex => ex.Id == id);
             if (exposition == null)
                 return NotFound();
 
@@ -62,13 +82,26 @@ namespace backend.Controllers
             exposition.Description = properties.Description;
             exposition.StartDate = properties.StartDate;
             exposition.EndDate = properties.EndDate;
+
+            if (properties.Metadata != null)
+            {
+                exposition.Metadata.Clear();
+                foreach (var meta in properties.Metadata)
+                {
+                    exposition.Metadata.Add(new ExpositionMetadata
+                    {
+                        Key = meta.Key,
+                        Value = meta.Value
+                    });
+                }
+            }
             await _dbContext.SaveChangesAsync();
 
             return Ok();
         }
 
         [HttpGet("graph/{id}")]
-        public async Task<ActionResult> GetGraph(int id)
+        public async Task<ActionResult<string>> GetGraph(int id)
         {
             Exposition exposition = await _dbContext.Expositions.FindAsync(id);
             if (exposition == null)
@@ -88,7 +121,100 @@ namespace backend.Controllers
             await _dbContext.SaveChangesAsync();
 
             return Ok();
+        }
 
+        [HttpPost("overlay/{id}/{exhibit_id}")]
+        public async Task<ActionResult> SetPackageOverlay(int id, string exhibit_id, [FromBody] PackageOverlayProperties pkg_overlay)
+        {
+            Exposition exposition = await _dbContext.Expositions
+                .Include(ex => ex.PackageOverlays)
+                .ThenInclude(ov => ov.AssignedExhibit)
+                .FirstOrDefaultAsync(ex => ex.Id == id);
+            if (exposition == null)
+                return NotFound();
+            Exhibit exhibit = await _dbContext.Exhibits.FirstOrDefaultAsync(ex => ex.Hostname == exhibit_id);
+            if (exhibit == null)
+                return NotFound();
+
+            PackageOverlay overlay = exposition.PackageOverlays.FirstOrDefault(o => o.AssignedExhibit.Hostname == exhibit_id);
+            if (overlay == null)
+            {
+                overlay = new PackageOverlay()
+                {
+                    InputsJson = pkg_overlay.Inputs,
+                    OverwriteInputs = pkg_overlay.OverwriteInputs,
+                    SettingsJson = pkg_overlay.Settings,
+                    OverwriteSettings = pkg_overlay.OverwriteSettings,
+                    PackageId = pkg_overlay.PackageId,
+                    SyncJson = pkg_overlay.Sync,
+                    AssignedExhibit = exhibit
+                };
+                exposition.PackageOverlays.Add(overlay);
+            }
+            else
+            {
+                overlay.InputsJson = pkg_overlay.Inputs;
+                overlay.OverwriteInputs = pkg_overlay.OverwriteInputs;
+                overlay.SettingsJson = pkg_overlay.Settings;
+                overlay.OverwriteSettings = pkg_overlay.OverwriteSettings;
+                overlay.PackageId = pkg_overlay.PackageId;
+                overlay.SyncJson = pkg_overlay.Sync;
+            }
+            await _dbContext.SaveChangesAsync();
+            return Ok();
+        }
+
+        [HttpGet("overlay/{id}/{exhibit_id}")]
+        public async Task<ActionResult<PackageOverlayProperties>> GetPackageOverlay(int id, string exhibit_id)
+        {
+            Exposition exposition = await _dbContext.Expositions
+                .Include(ex => ex.PackageOverlays)
+                .ThenInclude(ov => ov.AssignedExhibit)
+                .FirstOrDefaultAsync(ex => ex.Id == id);
+
+            if (exposition == null)
+                return NotFound();
+
+            PackageOverlay overlay = exposition.PackageOverlays.FirstOrDefault(o => o.AssignedExhibit.Hostname == exhibit_id);
+            if (overlay == null)
+                return NotFound();
+
+            return Ok(new PackageOverlayProperties {
+                Id = overlay.Id,
+                OverwriteInputs = overlay.OverwriteInputs,
+                Inputs = overlay.InputsJson,
+                OverwriteSettings = overlay.OverwriteSettings,
+                Settings = overlay.SettingsJson,
+                PackageId = overlay.PackageId,
+                Sync = overlay.SyncJson
+            });
+        }
+
+        [HttpDelete("overlay/{id}/{package_id}")]
+        public async Task<ActionResult> DeletePackageOverlay(int id, int package_id)
+        {
+            Exposition exposition = await _dbContext.Expositions.FindAsync(id);
+            if (exposition == null)
+                return NotFound();
+            await _dbContext.Entry(exposition).Collection<PackageOverlay>(ex => ex.PackageOverlays).LoadAsync();
+            PackageOverlay overlay = exposition.PackageOverlays.FirstOrDefault(o => o.PackageId == package_id);
+            if (overlay == null)
+                return NotFound();
+            exposition.PackageOverlays.Remove(overlay);
+            await _dbContext.SaveChangesAsync();
+            return Ok();
+        }
+
+        [HttpDelete("overlay/{id}/all")]
+        public async Task<ActionResult> DeletePackageOverlays(int id)
+        {
+            Exposition exposition = await _dbContext.Expositions.FindAsync(id);
+            if (exposition == null)
+                return NotFound();
+            await _dbContext.Entry(exposition).Collection<PackageOverlay>(ex => ex.PackageOverlays).LoadAsync();
+            exposition.PackageOverlays.Clear();
+            await _dbContext.SaveChangesAsync();
+            return Ok();
         }
     }
 }
