# backend/Model/EmtContext.cs
@@ -1,3 +1,4 @@
+using System.Collections.Generic;
 using Microsoft.EntityFrameworkCore;
 
 namespace backend.Model
@@ -17,6 +18,52 @@ namespace backend.Model
         protected override void OnModelCreating(ModelBuilder builder)
         {
             base.OnModelCreating(builder);
+
+
+            Exhibit[] exhibits = new Exhibit[] {
+                new Exhibit() {
+                    Id = 1,
+                    Hostname = "pgebox"
+                },
+                new Exhibit() {
+                    Id = 2,
+                    Hostname = "ipw2"
+                }
+            };
+
+            builder.Entity<Exhibit>().HasData(exhibits);
+
+            List<Sensor> sensors = new List<Sensor>()
+            {
+                new Sensor() {
+                    Id = 1,
+                    ExhibitId = exhibits[0].Id,
+                    Path = "raspi-1-ir-1",
+                    ValueType = ValueType.Bool
+                },
+                new Sensor() {
+                    Id = 2,
+                    ExhibitId = exhibits[0].Id,
+                    Path = "rpi-camera",
+                    ValueType = ValueType.Event,
+                    AvailableEvents = "GestureSwipeUp,GestureSwipeDown,GestureSwipeLeft,GestureSwipeRight"
+                },
+                new Sensor() {
+                    Id = 3,
+                    ExhibitId = exhibits[1].Id,
+                    Path = "raspi-1-ir-1",
+                    ValueType = ValueType.Bool
+                },
+                new Sensor() {
+                    Id = 4,
+                    ExhibitId = exhibits[1].Id,
+                    Path = "1",
+                    ValueType = ValueType.Event,
+                    AvailableEvents = "GestureSwipeUp,GestureSwipeDown,GestureSwipeLeft,GestureSwipeRight"
+                }
+            };
+
+            builder.Entity<Sensor>().HasData(sensors);
         }
     }
 }
